[project]
name = "dolist"
version = "0.4.0"
description = "To-Do list on Command Line Interface"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Bruno Rocha", email = "rochacbruno@gmail.com"}
]
keywords = ["todo", "cli", "task", "productivity", "dolist"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]

dependencies = [
    "termcolor>=2.0.0",
    "cyclopts>=3.0.0",
    "rich>=13.0.0",
    "textual>=1.0.0",
    "pydantic>=2.0.0",
    "ptpython>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/rochacbruno/dolist"
Repository = "https://github.com/rochacbruno/dolist"
Issues = "https://github.com/rochacbruno/dolist/issues"
PyPI = "https://pypi.org/project/dolist/"

[project.scripts]
dolist = "dolist.do:main_entry"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dolist"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
